Fixed #938 - Reduce Compiler Warnings Java 11