@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2018 Lablicate GmbH.
+ * Copyright (c) 2011, 2022 Lablicate GmbH.
  * 
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -88,7 +88,7 @@ public class WncIon implements IWncIon {
 	@Override
 	public int hashCode() {
 
-		return 7 * new Integer(ion).hashCode() + 11 * name.hashCode();
+		return 7 * Integer.valueOf(ion).hashCode() + 11 * name.hashCode();
 	}
 
 	@Override
