@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Lablicate GmbH.
+ * Copyright (c) 2021, 2022 Lablicate GmbH.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -41,13 +41,13 @@ public class ReaderVersion105 {
 			DoubleBuffer doubleBuffer = byteBuffer.asDoubleBuffer();
 			values = new double[doubleBuffer.capacity()];
 			for(int index = 0; index < doubleBuffer.capacity(); index++) {
-				values[index] = new Double(doubleBuffer.get(index));
+				values[index] = Double.valueOf(doubleBuffer.get(index));
 			}
 		} else if(precision == 32) {
 			FloatBuffer floatBuffer = byteBuffer.asFloatBuffer();
 			values = new double[floatBuffer.capacity()];
 			for(int index = 0; index < floatBuffer.capacity(); index++) {
-				values[index] = new Double(floatBuffer.get(index));
+				values[index] = Double.valueOf(floatBuffer.get(index));
 			}
 		}
 		return values;
