@@ -108,13 +108,13 @@ public class MassSpectrumReaderVersion20 extends AbstractMassSpectraReader imple
 					DoubleBuffer doubleBuffer = byteBuffer.asDoubleBuffer();
 					values = new double[doubleBuffer.capacity()];
 					for(int index = 0; index < doubleBuffer.capacity(); index++) {
-						values[index] = new Double(doubleBuffer.get(index));
+						values[index] = Double.valueOf(doubleBuffer.get(index));
 					}
 				} else {
 					FloatBuffer floatBuffer = byteBuffer.asFloatBuffer();
 					values = new double[floatBuffer.capacity()];
 					for(int index = 0; index < floatBuffer.capacity(); index++) {
-						values[index] = new Double(floatBuffer.get(index));
+						values[index] = Double.valueOf(floatBuffer.get(index));
 					}
 				}
 				//
