@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2016, 2018 Lablicate GmbH.
+ * Copyright (c) 2016, 2022 Lablicate GmbH.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -75,8 +75,8 @@ public class MarkedWavelength implements IMarkedWavelength {
 	@Override
 	public int hashCode() {
 
-		return 7 * new Double(wavelength).hashCode() + //
-				11 * new Integer(magnification).hashCode();
+		return 7 * Double.valueOf(wavelength).hashCode() + //
+				11 * Integer.valueOf(magnification).hashCode();
 	}
 
 	@Override
